--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "future_test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://smyk-o.github.io/future_tes/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "classnames": "^2.2.6",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
